added feature page

--- a/public/mod/class.html
+++ b/public/mod/class.html
@@ -16,6 +16,7 @@
 			}
 			#first {
 			    float:left; /* add this */
+			    padding-right: 1cm;
 			}
 			#second {
 			    overflow: left; /* if you don't want #second to wrap below #first */
