added ac, hit poits and hit dice

--- a/world.html
+++ b/world.html
@@ -84,6 +84,8 @@
 									worldName:world.name,
 									worldId:world["_id"],
 									exp:0,
+									hitPoints:0,
+									ac:0,
 									raceName: this.state.form.pRace.name,
 									className: this.state.form.pClass.name,
 									raceId: this.state.form.pRace["_id"],
